--- a/style/style.css
+++ b/style/style.css
@@ -78,6 +78,13 @@ header .container i:hover {
   margin: 0 2rem;
 }
 
+.container img {
+  width: 5rem;
+  margin: 0 auto;
+  -webkit-transition: 250ms;
+  transition: 250ms;
+}
+
 .container-flex {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -139,8 +146,8 @@ nav li a {
   text-transform: uppercase;
 }
 
-.desktop-nav li:last-child a {
-  color: #888888;
+.logOutBtn {
+  color: #888888 !important;
 }
 
 form {
@@ -153,6 +160,8 @@ form {
           flex-direction: column;
   max-width: 20rem;
   margin: 2rem auto;
+  -webkit-animation: fadein 500ms;
+          animation: fadein 500ms;
 }
 
 form input:not(input[type="submit"]), form label, form select {
@@ -209,6 +218,8 @@ form input[type="submit"] {
 }
 
 .boxes .box {
+  -webkit-animation: fadein 500ms;
+          animation: fadein 500ms;
   width: 100%;
   padding: 2rem;
   -webkit-box-shadow: 0px 0px 8px -2px #c5c5c5;
@@ -348,6 +359,32 @@ form input[type="submit"] {
 p {
   color: #888888;
   font-weight: 600;
+}
+
+@-webkit-keyframes fadein {
+  from {
+    opacity: 0;
+    -webkit-transform: translateY(-2rem);
+            transform: translateY(-2rem);
+  }
+  to {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+}
+
+@keyframes fadein {
+  from {
+    opacity: 0;
+    -webkit-transform: translateY(-2rem);
+            transform: translateY(-2rem);
+  }
+  to {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
 }
 
 @media (min-width: 767px) {
