--- a/style/style.scss
+++ b/style/style.scss
@@ -71,6 +71,12 @@ header {
 
 .container {
     margin:0 2rem;
+
+    img {
+        width: 5rem;
+        margin:0 auto;
+        transition:250ms;
+    }
 }
 
 .container-flex {
@@ -123,8 +129,8 @@ nav {
     }
 }
 
-.desktop-nav li:last-child a {
-    color:$darkGreyColor;
+.logOutBtn {
+    color:$darkGreyColor !important;
 }
 
 // Forms
@@ -134,6 +140,7 @@ form {
     flex-direction: column;
     max-width: 20rem;
     margin:2rem auto;
+    animation:fadein 500ms;
 
     input:not(input[type="submit"]), label, select {
         width: 100%;
@@ -190,6 +197,7 @@ form {
     flex-wrap: wrap;
 
     .box {
+        animation:fadein 500ms;
         width: 100%;
         padding:2rem;
         box-shadow: $box-shadow;
@@ -261,10 +269,6 @@ form {
         }
     }
 }
-  
-// .log-box {
-//     text-align: left !important;
-// } 
 
 // Buttons
 
@@ -324,6 +328,19 @@ form {
 p {
     color:$darkGreyColor;
     font-weight: 600;
+}
+
+// Animations
+
+@keyframes fadein {
+    from {
+        opacity:0;
+        transform:translateY(-2rem);
+    }
+    to {
+        opacity: 1;
+        transform:translateY(0);
+    }
 }
 
 // Respnosive
