--- a/style/style.scss
+++ b/style/style.scss
@@ -176,6 +176,24 @@ form {
     }
 }
 
+// Filter
+
+.filter {
+    display:flex;
+
+    #search {
+        width: 60%;
+        margin:0 auto;
+        font-size:1.2rem;
+        padding:.5rem;
+        border-radius: $border-radius;
+        outline:none;
+        border:2px solid $lightGreyColor;
+        transition:250ms;
+        box-sizing: border-box;
+    }
+}
+
 .goBack {
 
     i {
@@ -335,7 +353,7 @@ p {
 @keyframes fadein {
     from {
         opacity:0;
-        transform:translateY(-2rem);
+        transform:translateY(-1rem);
     }
     to {
         opacity: 1;
