--- a/views/changepassword.html
+++ b/views/changepassword.html
@@ -37,7 +37,7 @@
         </div>
         <div class="container-flex">
           <i id="hamburger" class="fa-solid fa-bars"></i>
-          <a id="logOutBtn" class="btn-clean"
+          <a class="logOutBtn"
             ><i class="fa-solid fa-arrow-right-from-bracket"></i
           ></a>
         </div>
@@ -60,34 +60,38 @@
     </header>
     <!-- Content -->
     <div class="container">
-      <h2>Add a pet.</h2>
-      <p>Fill in details about the pet.</p>
-      <form name="addPetForm" enctype="multipart/form-data">
-        <label for="name">Pet name</label>
-        <input type="text" name="name" id="name" placeholder="Name" required />
-        <label for="clientEmail">Owner's email</label>
+      <form name="changePassword">
+        <h2>Change password</h2>
+        <p>Fill in details.</p>
+        <label for="email">Email</label>
         <input
           type="email"
-          name="clientEmail"
-          id="clientEmail"
-          placeholder="Owner's email"
+          name="email"
+          id="email"
           required
+          placeholder="Email"
         />
-        <label for="age">How old is the pet?</label>
+        <label for="oldpass">Old password</label>
         <input
-          type="number"
-          id="age"
-          name="age"
-          min="1"
-          max="100"
-          placeholder="Age"
+          type="password"
+          name="oldpass"
+          id="oldpass"
           required
+          placeholder="Old password"
         />
-        <input class="btn-primary" type="submit" value="Add pet" />
+        <label for="newpassword">New password</label>
+        <input
+          type="password"
+          name="newpass"
+          id="newpass"
+          required
+          placeholder="New password"
+        />
+        <input class="btn-primary" type="submit" value="Change password" />
       </form>
     </div>
     <!-- JS -->
-    <script src="./js/hamburger.js"></script>
-    <script src="./js/addpet.js"></script>
+    <script src="../js/hamburger.js"></script>
+    <script src="../js/changepassword.js"></script>
   </body>
 </html>
