--- a/views/resetpassword.html
+++ b/views/resetpassword.html
@@ -31,7 +31,7 @@
     <!-- Header -->
     <header>
       <div class="container">
-        <div onclick="window.location='index.html'" class="logo">
+        <div onclick="window.location='../index.html'" class="logo">
           <img src="/assets/images/logoCircled.png" alt="VetPaw" />
           <div class="logo-title">Vet<span>Paw</span></div>
         </div>
@@ -40,23 +40,26 @@
         </div>
         <!-- Desktop nav -->
         <nav class="desktop-nav">
-          <li><a href="index.html">Login</a></li>
+          <li><a href="../index.html">Login</a></li>
+          <li><a href="./register.html">Register</a></li>
         </nav>
       </div>
       <div class="container">
         <!-- Mobile nav -->
         <nav class="mobile-nav">
-          <li><a href="index.html">Login</a></li>
+          <li><a href="../index.html">Login</a></li>
+          <li><a href="./register.html">Register</a></li>
         </nav>
       </div>
     </header>
     <!-- Content -->
     <div class="container">
-      <form name="registerForm">
-        <h2>Register a new account</h2>
-        <p>Fill in your details.</p>
-        <label for="name">First Name</label>
-        <input type="text" name="name" id="name" placeholder="First name" />
+      <form name="resetpassword">
+        <h2>Reset password</h2>
+        <p>
+          Enter your email. If provided email exist in the database, you will
+          receive a new password.
+        </p>
         <label for="email">Email</label>
         <input
           type="email"
@@ -65,28 +68,14 @@
           required
           placeholder="Email"
         />
-        <label for="password">Password</label>
-        <input
-          type="password"
-          name="password"
-          id="password"
-          placeholder="Password"
-        />
-        <label for="confirmPassword">Confirm password</label>
-        <input
-          type="password"
-          name="confirmPassword"
-          id="confirmPassword"
-          placeholder="Confirm password"
-        />
-        <input class="btn-primary" type="submit" value="Register" />
+        <input class="btn-primary" type="submit" value="Reset password" />
       </form>
       <div class="options">
-        <p>Already have an account?</p>
+        <p>Back to login page</p>
         <button
           type="button"
           class="btn-clean goBack"
-          onclick="window.location='./index.html'"
+          onclick="window.location='../index.html'"
         >
           Login
           <i class="fa-solid fa-rotate-left"></i>
@@ -94,7 +83,7 @@
       </div>
     </div>
     <!-- JS -->
-    <script src="./js/hamburger.js"></script>
-    <script src="./js/register.js"></script>
+    <script src="../js/hamburger.js"></script>
+    <script src="../js/resetpassword.js"></script>
   </body>
 </html>
