--- a/style/_Containers.scss
+++ b/style/_Containers.scss
@@ -119,6 +119,16 @@ section {
             color: $darkGreyColor;
             font-style: italic;
         }
+
+        .pet-image {
+
+            img {
+                border-radius: 50%;
+                width:5rem;
+                margin: 0 auto;
+                transition: 250ms;
+            }
+        }
     }
 }
 
