--- a/style/style.css
+++ b/style/style.css
@@ -303,6 +303,14 @@ section {
   font-style: italic;
 }
 
+.boxes .box .pet-image img {
+  border-radius: 50%;
+  width: 5rem;
+  margin: 0 auto;
+  -webkit-transition: 250ms;
+  transition: 250ms;
+}
+
 .prescription {
   background-color: #f7f4ff;
 }
