--- a/views/addpet.html
+++ b/views/addpet.html
@@ -62,7 +62,7 @@
     <div class="container">
       <h2>Add a pet.</h2>
       <p>Fill in details about the pet.</p>
-      <form name="addPetForm" enctype="multipart/form-data">
+      <form action="#" name="addPetForm">
         <label for="name">Pet name</label>
         <input type="text" name="name" id="name" placeholder="Name" required />
         <label for="clientEmail">Owner's email</label>
@@ -83,6 +83,8 @@
           placeholder="Age"
           required
         />
+        <label for="img">Pet image</label>
+        <input type="file" name="img" id="img" />
         <input class="btn-primary" type="submit" value="Add pet" />
       </form>
     </div>
