--- a/views/addpet.html
+++ b/views/addpet.html
@@ -62,7 +62,7 @@
     <div class="container">
       <h2>Add a pet.</h2>
       <p>Fill in details about the pet.</p>
-      <form action="#" name="addPetForm">
+      <form name="addPetForm">
         <label for="name">Pet name</label>
         <input type="text" name="name" id="name" placeholder="Name" required />
         <label for="clientEmail">Owner's email</label>
