--- a/style/style.css
+++ b/style/style.css
@@ -328,7 +328,7 @@ section {
   outline: none;
   border-radius: 0.4rem;
   border: 1px solid #c5c5c5;
-  font-size: 1.2rem;
+  font-size: 1rem;
   padding: 1rem;
   -webkit-transition: 250ms;
   transition: 250ms;
@@ -399,7 +399,7 @@ p {
 }
 
 .filter #search {
-  width: 60%;
+  width: 100%;
   margin: 0 auto;
   font-size: 1.2rem;
   padding: .5rem;
@@ -453,6 +453,9 @@ p {
   }
   .box {
     width: 37% !important;
+  }
+  #search {
+    width: 60% !important;
   }
 }
 
