--- a/views/addlog.html
+++ b/views/addlog.html
@@ -82,6 +82,7 @@
       </form>
     </div>
     <!-- JS -->
+    <script src="../js/notification.js"></script>
     <script src="../js/hamburger.js"></script>
     <script src="../js/addlog.js"></script>
   </body>
