--- a/views/addpet.html
+++ b/views/addpet.html
@@ -89,6 +89,7 @@
       </form>
     </div>
     <!-- JS -->
+    <script src="../js/notification.js"></script>
     <script src="../js/hamburger.js"></script>
     <script src="../js/addpet.js"></script>
   </body>
