--- a/views/changepassword.html
+++ b/views/changepassword.html
@@ -91,6 +91,7 @@
       </form>
     </div>
     <!-- JS -->
+    <script src="../js/notification.js"></script>
     <script src="../js/hamburger.js"></script>
     <script src="../js/changepassword.js"></script>
   </body>
