--- a/views/logs.html
+++ b/views/logs.html
@@ -87,6 +87,7 @@
       <div class="boxes logs">No logs found...</div>
     </div>
     <!-- JS -->
+    <script src="../js/notification.js"></script>
     <script src="../js/hamburger.js"></script>
     <script src="../js/logs.js"></script>
   </body>
