--- a/views/register.html
+++ b/views/register.html
@@ -94,6 +94,7 @@
       </div>
     </div>
     <!-- JS -->
+    <script src="../js/notification.js"></script>
     <script src="../js/hamburger.js"></script>
     <script src="../js/register.js"></script>
   </body>
