--- a/style/style.css
+++ b/style/style.css
@@ -442,6 +442,49 @@ p {
   }
 }
 
+.notification {
+  opacity: 1;
+  -webkit-transition: 250ms;
+  transition: 250ms;
+  min-width: 60%;
+  min-height: 3rem;
+  -webkit-box-shadow: 0px 0px 8px -2px #c5c5c5;
+          box-shadow: 0px 0px 8px -2px #c5c5c5;
+  background-color: #ffffffec;
+  position: absolute;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.notification button, .notification p {
+  margin: .8rem;
+}
+
+.notification button {
+  padding: .5rem .8rem;
+  margin-bottom: 0;
+}
+
+.notification p {
+  padding: 1rem;
+  color: #000;
+}
+
 @media (min-width: 767px) {
   .container {
     max-width: 40rem;
