--- a/views/addprescription.html
+++ b/views/addprescription.html
@@ -82,6 +82,7 @@
       </form>
     </div>
     <!-- JS -->
+    <script src="../js/notification.js"></script>
     <script src="../js/hamburger.js"></script>
     <script src="../js/addprescription.js"></script>
   </body>
