--- a/views/home.html
+++ b/views/home.html
@@ -77,6 +77,7 @@
       </div>
     </div>
     <!-- JS -->
+    <script src="../js/notification.js"></script>
     <script src="../js/hamburger.js"></script>
     <script src="../js/home.js"></script>
   </body>
