--- a/views/medications.html
+++ b/views/medications.html
@@ -74,6 +74,7 @@
       </div>
     </div>
     <!-- JS -->
+    <script src="../js/notification.js"></script>
     <script src="../js/hamburger.js"></script>
     <script src="../js/medications.js"></script>
   </body>
