--- a/views/resetpassword.html
+++ b/views/resetpassword.html
@@ -83,6 +83,7 @@
       </div>
     </div>
     <!-- JS -->
+    <script src="../js/notification.js"></script>
     <script src="../js/hamburger.js"></script>
     <script src="../js/resetpassword.js"></script>
   </body>
